@@ -1,5 +1,8 @@
 2016-11-18  Jérôme Pasquier  <rainbru@free.fr>
 
+	* src/client/EmptyGameState.hpp: created becaused used in two
+	test files.
+
 	* src/client/MainMenu.cpp  (save/restore): empty override of pure
 	virtual functions.
 	* src/client/GameState.hpp (save/restore): add two pure virtual
